--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                                 <h3 class="burger__title">Социальные сети</h3>
                             <div class="burger__info">
                                 
-                                <a href="https://www.facebook.com/" target="_blank" class="burger__link--pictures" ><img src="../assets/icon/footer/facebook.svg" alt="error" ></a>
-                                <a href="https://twitter.com/?lang=ru" target="_blank " class="burger__link--img" ><img src="../assets/icon/footer/twit.svg" alt="error" ></a>
-                                <a href="https://www.instagram.com/" target="_blank " class="burger__link--img" ><img src="../assets/icon/footer/instagram.svg" alt="error" ></a>
-                                <a href="https://www.tiktok.com/" target="_blank " class="burger__link--photo" ><img src="../assets/icon/footer/noname.svg" alt="error" ></a>
+                                <a href="https://www.facebook.com/" target="_blank" class="burger__link--pictures" ><img src="./assets/icon/footer/facebook.svg" alt="error" ></a>
+                                <a href="https://twitter.com/?lang=ru" target="_blank " class="burger__link--img" ><img src="./assets/icon/footer/twit.svg" alt="error" ></a>
+                                <a href="https://www.instagram.com/" target="_blank " class="burger__link--img" ><img src="./assets/icon/footer/instagram.svg" alt="error" ></a>
+                                <a href="https://www.tiktok.com/" target="_blank " class="burger__link--photo" ><img src="./assets/icon/footer/noname.svg" alt="error" ></a>
                             </div>
                         </ul>
                     </div>
@@ -158,7 +158,7 @@
                     <div class="footer__third">
                         <h3 class="footer__third--title footer__title">Контакты</h3>
                         <div class="footer__third--address">
-                            <img src="../assets/icon/footer/address.svg" alt="error" class="footer__img"> 
+                            <img src="./assets/icon/footer/address.svg" alt="error" class="footer__img"> 
                             <span class="footer__address">анкара 28</span>
                         </div>
                         <div class="footer__tell">
@@ -172,10 +172,10 @@
                     </div>
                     <div class="footer__fourth">
                         <h3 class="footer__fourth--title footer__title">Социальные сети</h3>
-                        <a href="https://www.facebook.com/" target="_blank" class="footer__link--img" ><img src="../assets/icon/footer/facebook.svg" alt="error" class="footer__img--socil"></a>
-                        <a href="https://twitter.com/?lang=ru" target="_blank " class="footer__link--img" ><img src="../assets/icon/footer/twit.svg" alt="error" class="footer__img--socil"></a>
-                        <a href="https://www.instagram.com/" target="_blank " class="footer__link--img" ><img src="../assets/icon/footer/instagram.svg" alt="error" class="footer__img--socil footer__icon"></a>
-                        <a href="https://www.tiktok.com/" target="_blank " class="footer__link--img" ><img src="../assets/icon/footer/noname.svg" alt="error" class="footer__img--socil footer__icon"></a>
+                        <a href="https://www.facebook.com/" target="_blank" class="footer__link--img" ><img src="./assets/icon/footer/facebook.svg" alt="error" class="footer__img--socil"></a>
+                        <a href="https://twitter.com/?lang=ru" target="_blank " class="footer__link--img" ><img src="./assets/icon/footer/twit.svg" alt="error" class="footer__img--socil"></a>
+                        <a href="https://www.instagram.com/" target="_blank " class="footer__link--img" ><img src="./assets/icon/footer/instagram.svg" alt="error" class="footer__img--socil footer__icon"></a>
+                        <a href="https://www.tiktok.com/" target="_blank " class="footer__link--img" ><img src="./assets/icon/footer/noname.svg" alt="error" class="footer__img--socil footer__icon"></a>
                     </div>
                 </div>
             </div>
