https://sexyboyfrend.github.io/Digital-

--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
                     </div>
                     <div class="footer__fourth">
                         <h3 class="footer__fourth--title footer__title">Социальные сети</h3>
-                        <a href="https://www.facebook.com/" target="_blank" class="footer__link--img" ><img src="./assets/icon/footer/facebook.svg" alt="error" class="footer__img--socil"></a>
-                        <a href="https://twitter.com/?lang=ru" target="_blank " class="footer__link--img" ><img src="./assets/icon/footer/twit.svg" alt="error" class="footer__img--socil"></a>
-                        <a href="https://www.instagram.com/" target="_blank " class="footer__link--img" ><img src="./assets/icon/footer/instagram.svg" alt="error" class="footer__img--socil footer__icon"></a>
-                        <a href="https://www.tiktok.com/" target="_blank " class="footer__link--img" ><img src="./assets/icon/footer/noname.svg" alt="error" class="footer__img--socil footer__icon"></a>
+                        <a href="https://www.facebook.com/" target="_blank" class="footer__link--img" ><img src="./assets/icon/footer/fac.svg" alt="facebook" class="footer__img--socil"></a>
+                        <a href="https://twitter.com/?lang=ru" target="_blank " class="footer__link--img" ><img src="./assets/icon/footer/twit.svg" alt="twitter" class="footer__img--socil"></a>
+                        <a href="https://www.instagram.com/" target="_blank " class="footer__link--img" ><img src="./assets/icon/footer/instagram.svg" alt="instagram" class="footer__img--socil footer__icon"></a>
+                        <a href="https://www.tiktok.com/" target="_blank " class="footer__link--img" ><img src="./assets/icon/footer/noname.svg" alt="noname" class="footer__img--socil footer__icon"></a>
                     </div>
                 </div>
             </div>
-            <div class="line"></div>
+            <div class="line qwerty"></div>
             <p class="save">© 2019 Digital Project. Все права защищены.</p>
         </footer> 
         <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
