--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                        
                         </div>
                         <ul class="burger__list">
-                                <li class="burger__item"><a href="./index.html" class="burger__link">ГЛАВНАЯ</a></li>
-                                <li class="burger__item"><a href="./pagges/photo.html" class="burger__link">ГАЛЕРЕЯ</a></li>
-                                <li class="burger__item"><a href="./pagges/project.html" class="burger__link">ПРОЕКТЫ</a></li>
-                                <li class="burger__item"><a href="./pagges/company.html" class="burger__link"></a>СЕРТИФИКАТЫ</li>
-                                <li class="burger__item"><a href="./pagges/contacts.html" class="burger__link">КОНТАКТЫ</a></li>
-                                <h3 class="burger__title">Социальные сети</h3>
+                            <li class="burger__item"><a href="./index.html" class="burger__link">ГЛАВНАЯ</a></li>
+                            <li class="burger__item"><a href="./pagges/photo.html" class="burger__link">ГАЛЕРЕЯ</a></li>
+                            <li class="burger__item"><a href="./pagges/project.html" class="burger__link">ПРОЕКТЫ</a></li>
+                            <li class="burger__item"><a href="./pagges/company.html" class="burger__link"></a>СЕРТИФИКАТЫ</li>
+                            <li class="burger__item"><a href="./pagges/contacts.html" class="burger__link">КОНТАКТЫ</a></li>
+                            <h3 class="burger__title">Социальные сети</h3>
                             <div class="burger__info">
                                 
                                 <a href="https://www.facebook.com/" target="_blank" class="burger__link--pictures" ><img src="./assets/icon/footer/facebook.svg" alt="error" ></a>
@@ -175,7 +175,7 @@
                         <a href="https://www.facebook.com/" target="_blank" class="footer__link--img" ><img src="./assets/icon/footer/fac.svg" alt="facebook" class="footer__img--socil"></a>
                         <a href="https://twitter.com/?lang=ru" target="_blank " class="footer__link--img" ><img src="./assets/icon/footer/twit.svg" alt="twitter" class="footer__img--socil"></a>
                         <a href="https://www.instagram.com/" target="_blank " class="footer__link--img" ><img src="./assets/icon/footer/instagram.svg" alt="instagram" class="footer__img--socil footer__icon"></a>
-                        <a href="https://www.tiktok.com/" target="_blank " class="footer__link--img" ><img src="./assets/icon/footer/noname.svg" alt="noname" class="footer__img--socil footer__icon"></a>
+                        <a href="https://www.tiktok.com/" target="_blank " class="footer__link--img" ><img src="./assets/icon/footer/noname.svg" alt="ni" class="footer__img--socil footer__icon"></a>
                     </div>
                 </div>
             </div>
